added vercel analytics

--- a/build-web/bin/SoftwareRenderer.html
+++ b/build-web/bin/SoftwareRenderer.html
@@ -51,5 +51,6 @@
         var Module = { canvas: document.getElementById('canvas') };
     </script>
     <script async type="text/javascript" src="SoftwareRenderer.js"></script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
