--- a/shell.html
+++ b/shell.html
@@ -51,5 +51,6 @@
         var Module = { canvas: document.getElementById('canvas') };
     </script>
     {{{ SCRIPT }}}
+    <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
